added the potentials

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -170,7 +170,7 @@ The converse is true when $H < H^*$, but since the system is then coming from th
 This causes the deterministic unidirectional movements through the four states sequentially when two field sweeps are applied.
 Since the two low field states that get accessed sequentially have two different $P_b$ values, this situation effectively results in a single crystal binary counter behavior.  
 
-This robust one directional rotation of certain order parameters allows one to assign a non-zero winding number to the `magic-angle` switching behavior, i.e. $Q=\frac{1}{2\pi}\int_0^{T_0} dt (l_x\partial_t l_y - l_y \partial_t l_x)$. 
+This robust one directional rotation of certain order parameters allows one to assign a non-zero winding number to the `magic-angle` switching behavior, i.e. $Q=\frac{1}{2\pi}\int_0^{T_0} dt (L_x\partial_t L_y - L_y \partial_t L_x)$. 
 
 \section{Simplified Model}
 Having found a description for the situation in the complicated material GdMn$_2$O$_5$ using the model \ref{eq:GdMn2O5_1}, one may wonder what the minimal requirements are to have a similar four-state behavior where the spins rotate 360$^\circ$ while the applied field only oscillates back and forth along a single axis.
