--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -62,7 +62,7 @@ We first separate $\bm{\nabla}V$ in two contributions, one coming from the poten
 These contributions, together with the two parts of the Bloch functions (i.e. the cell periodic \unkr, and envelope function \eikr) are pictorially shown in Fig.~\ref{fig:Efield_cell_drawing}. 
 \begin{figure}[h]
 ~\centering
-\IncludeGraphics[width=0.5\linewidth]{V2V3drawing.png}\caption{\label{fig:Efield_cell_drawing} Pictorial representation of the different electric fields present in the crystal. The black lines denote the atomic potential and electric field, $V_{at}$ and $E_{at}$ respectively, and the contribution due to ferroelectricity, $V_P$ and $E_P$. The green and red graphs denote the periodic ($u(\bm{k}, \bm{r})_n$) and envelope part of the Bloch functions, respectively.}
+\IncludeGraphics[width=\linewidth]{Rashba_potentials.png}\caption{\label{fig:Efield_cell_drawing} Pictorial representation of the different electric potentials ($V$) and fields ($E$) in a 2D square lattice. The blue spheres show the atoms, which produce the spherically symmetric red potential $V_a$ and field $E_a$. The purple slab denotes a uniform ferroelectric polarzation potential $V_p$ which in this case is directed along the crystalline $y$-direction, creating field $E_p$. The green and yellow surfaces denote two components of the Bloch function: $u_n(k) e^{ikx}$, where the yellow is the envelope plane wave part and the green the cell periodic part.}
 \end{figure}
 
 Looking at the picture, it becomes clear that the contribution of the atomic potential applied to the envelope function is zero because while $k$ is a constant, $E_{at}$ is odd throughout the unit cell, leading to the contributions on either side of the potential well to cancel out. Thus the only contribution to the first term in Eq. \ref{eq:kp_expansion} comes from the uniform (even) $E_P$, which in general is very small compared to the atomic one. A similar argument can be applied to the contribution to $V_3$. Due to the shape of the periodic part of the wavefunction, only the contribution coming from $E_{at}$ will be nonzero, this is essentially the well-known atomic spin-orbit coupling and can be rather large. 
